@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: Support for cyclic terms in ground/1
+
   * FIXED: allow for peek_byte(-1), etc.  Michael A. Covington.
 
   * FIXED: Merged saved-state patches from main branch
